
        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes


* Fix a possible crash when serializing a Transaction if the incoming
  `req.socket` is null (possible if the socket has been destroyed).
  {issues}2479[#2479]}

* Fixes for run context handling for 'aws-sdk' instrumentation (S3, SQS, SNS)
  so that a span created after an AWS client command (in the same tick, in
  the command callback, or promise) is not a child of the automatic AWS
  span. This change also ensures captured errors from failing client commands
  are a child of the AWS span.

* Fix 'http' and 'https' instrumentation for outgoing requests to not have the
  'http' span context be active in user code. ({pull}2470[#2470])

* Fixes for 'ioredis' instrumentation ({pull}2460[#2460]):
+
**  Fix run-context so that a span created in the same tick as an ioredis
    client command will no longer be a child of the redis span.
**  Capture an APM error and correctly set span.outcome to "failure" when
    a redis client command calls back with an error.
**  Avoid a rare possible double-instrumentation of redis commands
    internally-queued before the RedisClient is "ready". ({issues}2459[#2459])
**  Add destination context so Redis shows up on the Service Map.


[[release-notes-3.25.0]]
==== 3.25.0 2021/11/24

[float]
===== Bug fixes

* Fixes for 'redis' instrumentation:
+
**  Fix run-context so that a span created in the same tick as a redis client
    command will no longer be a child of the redis span. ({issues}2430[#2430])
**  Capture an APM error and correctly set span.outcome to "failure" when
    a redis client command calls back with an error.